# baigong

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  RELEASE_NOTES_v0.8.0.md  baigong.raw  build_app.py  example.py  launcher.py  launcher_pyinstaller.py  make_dmg.py  make_icon.py  pyproject.toml  run.py  run_demo.py  setup.py  打开百工Demo.command  百工 Baigong.spec
agent_sdk/: __init__.py  agent_manager.py  agent_runtime.py  database.py  llm_base.py  message_bus.py  models.py  task_board.py  tool_base.py
agent_sdk/memory/: __init__.py  long_term.py  short_term.py
docs/: index.html  setup.html
frontend/: __init__.py  api_client.py  main_window.py  theme_manager.py
server/: __init__.py  config.py  llm_client.py  main.py  orchestrator.py  real_tools.py  system.py
web/: app.py  simulator.py
web/static/: style.css
web/templates/: index.html
