[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agent-company"
version = "0.2.2"
description = "百工 (Baigong) — 让 AI Agent 像工匠一样协作的开源框架"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Agent Company contributors"},
]
requires-python = ">=3.11"
keywords = ["ai", "agent", "multi-agent", "llm", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/geogre/agent-company"
Repository = "https://github.com/geogre/agent-company"

[tool.setuptools.packages.find]
include = ["agent_sdk*"]
